Fixed the spacing in the nav on smaller viewports

--- a/apps/web/src/styles/components/navigation/Header.module.scss
+++ b/apps/web/src/styles/components/navigation/Header.module.scss
@@ -44,7 +44,7 @@
 	background: var(--color-core-neutral-100);
 
 	@media (max-width: 768px) {
-		top: 98px;
+		top: 94px;
 		height: calc(100vh - 98px);
 	}
 }
